2004-02-06  Al Riddoch  <alriddoch@zepler.org>

	* tests/testForest.cpp: Update tests to use new accessors
	  for forest area.

2004-02-06  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.h, Mercator/Forest.cpp: Modify accessors
	  so area of a forest is stored as Polygon instead of a
	  box.

2004-02-03  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/RandCache.h: make RandCache store uint32 rather than
	  double. Should halve memory usage.

2004-01-24  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/Forest.h, Mercator/Forest.cpp: make forest use
	  RandCache.

2004-01-24  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/RandCache.h: add code to provide a pool of repeatable
	  (2d indexed) random numbers for use by Forest etc.
	  thanks to rsteinke.

2004-01-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp: Use WFMath's value of PI, as windows
	  does not include it in math.h.

2004-01-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp: Revert changes to rng seeding as the
	  behavoir broke some of the key repeatability features required.
	  Add comments explaining what the valued properties of the
	  algorithm are.

2004-01-17  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/Forest.cpp, Mercator/Forest.h : modified seeding
	  arrangement so that number of rng seeds is proportional to
	  number of trees, not number of gridpoints. This significantly 
	  speeds up forest generation and has the byproduct of improving
	  the randomness of forests. I defaulted the seed to 0 in the
	  constructor so hopefully existing code will still compile
	* tests/testForest.cpp put a seed in the forest constructor
	* tests/timeSeg.cpp added a test to time forest population

2004-01-17  Damien McGinnes <mcginnes at netspeed dot com.au>

	* Mercator/Forest.cpp : modified seeding in forest to use an array

2004-01-15  James Turner <james@worldforge.org>
    